# wgups

./: .gitignore  0900log.txt  1000log.txt  1056log.txt  1057log.txt  1112.txt  AlgorithmOverview.md  README.md  pyproject.toml
src/wgups/: delivery_manager.py  delivery_truck.py  main.py  package.py  special_route.py  utils.py
src/wgups/core/: constants.py  delivery_manager.py  delivery_truck.py  package.py  special_route.py  utils.py
src/wgups/data_structures/: avl_tree.py  hash_table.py  min_heap.py
src/wgups/res/: distance_data.csv  locations.csv  package_file.csv
